--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.8",
     "@nuxtjs/axios": "^5.9.0",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.19",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.0.0",
     "lazysizes": "^5.2.0-beta1",
