--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.9.0",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-beta.19",
+    "@nuxtjs/style-resources": "^1.0.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.2",
     "lazysizes": "^5.2.0-beta1",
