--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.2.2",
+    "bootstrap-vue": "^2.4.1",
     "lazysizes": "^5.2.0-beta1",
     "masonry-layout": "^4.2.2",
     "nuxt": "^2.11.0",
     "nuxt-start": "^2.11.0"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^2.0.0",
+    "@nuxtjs/eslint-config": "^2.0.2",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/google-analytics": "^2.2.2",
     "@nuxtjs/router": "^1.5.0",
@@ -32,7 +32,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^25.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-nuxt": "^0.5.1",
     "jest": "^25.1.0",
     "lodash.clonedeep": "^4.5.0",
     "node-sass": "^4.13.1",
