--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "babel-jest": "^25.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-nuxt": "^0.5.1",
+    "fibers": "^4.0.2",
     "jest": "^25.1.0",
     "lodash.clonedeep": "^4.5.0",
-    "node-sass": "^4.13.1",
+    "sass": "^1.25.0",
     "sass-loader": "^8.0.0",
     "vue-jest": "^4.0.0-beta.2"
   }
