--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.8",
-    "@nuxtjs/axios": "^5.10.1",
+    "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.12.0",
+    "bootstrap-vue": "^2.14.0",
     "focus-visible": "^5.1.0",
     "lazysizes": "^5.2.0-beta1",
     "masonry-layout": "^4.2.2",
@@ -28,13 +28,13 @@
     "@nuxtjs/eslint-module": "^1.2.0",
     "@nuxtjs/google-analytics": "^2.2.2",
     "@nuxtjs/router": "^1.5.0",
-    "@vue/test-utils": "^1.0.0-beta.33",
+    "@vue/test-utils": "^1.0.2",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.4.0",
-    "eslint": "^6.7.2",
+    "babel-jest": "^25.5.1",
+    "eslint": "^7.0.0",
     "eslint-plugin-nuxt": "^0.5.2",
     "fibers": "^5.0.0",
-    "jest": "^25.4.0",
+    "jest": "^25.5.4",
     "lodash.clonedeep": "^4.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.0",
