--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
     "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.14.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "focus-visible": "^5.1.0",
-    "lazysizes": "^5.2.0-beta1",
+    "lazysizes": "^5.2.1",
     "masonry-layout": "^4.2.2",
     "nuxt": "^2.12.2",
     "nuxt-start": "^2.12.2"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^2.0.2",
-    "@nuxtjs/eslint-module": "^1.2.0",
-    "@nuxtjs/google-analytics": "^2.2.2",
+    "@nuxtjs/eslint-config": "^3.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/google-analytics": "^2.3.0",
     "@nuxtjs/router": "^1.5.0",
-    "@vue/test-utils": "^1.0.2",
+    "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.5.1",
-    "eslint": "^7.0.0",
-    "eslint-plugin-nuxt": "^0.5.2",
+    "babel-jest": "^26.0.1",
+    "eslint": "^7.1.0",
+    "eslint-plugin-nuxt": "^1.0.0",
     "fibers": "^5.0.0",
-    "jest": "^25.5.4",
+    "jest": "^26.0.1",
     "lodash.clonedeep": "^4.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.0",
