--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "lodash.clonedeep": "^4.5.0",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.0",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
     "vue-jest": "^4.0.0-beta.3"
   }
 }
