--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eslint-plugin-nuxt": "^1.0.0",
     "fibers": "^5.0.0",
     "jest": "^26.1.0",
-    "lodash.clonedeep": "^4.5.0",
+    "klona": "^1.1.2",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "stylelint": "^13.6.1",
