--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "test": "jest",
-    "clean": "rm -rf .nuxt node_modules"
+    "clean": "rm -rf .eslintcache .nuxt node_modules"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -23,15 +23,16 @@
     "nuxt-start": "^2.14.7"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^4.0.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/router": "^1.5.0",
+    "@nuxtjs/stylelint-module": "^4.0.0",
     "@vue/test-utils": "^1.1.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.13.0",
-    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-nuxt": "^2.0.0",
     "fibers": "^5.0.0",
     "jest": "^26.6.3",
     "klona": "^2.0.4",
