--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
     "focus-visible": "^5.2.0",
     "lazysizes": "^5.3.0",
     "masonry-layout": "^4.2.2",
-    "nuxt": "^2.14.12",
-    "nuxt-start": "^2.14.12"
+    "nuxt": "^2.15.3",
+    "nuxt-start": "^2.15.3"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/router": "^1.5.0",
+    "@nuxtjs/router": "^1.6.1",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@vue/test-utils": "^1.1.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.20.0",
+    "eslint": "^7.22.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "fibers": "^5.0.0",
     "jest": "^26.6.3",
     "klona": "^2.0.4",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
-    "stylelint": "^13.11.0",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
-    "vue-jest": "^4.0.0-rc.1"
+    "vue-jest": "^4.0.1"
   }
 }
