--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt-start": "^2.15.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
