--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "eslint": "eslint .",
+    "stylelint": "stylelint **/*.{css,scss}",
     "test": "jest",
     "clean": "rm -rf .eslintcache .nuxt node_modules"
   },
@@ -23,7 +25,7 @@
     "nuxt-start": "^2.15.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
+    "@babel/core": "^7.13.16",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
@@ -32,15 +34,15 @@
     "@vue/test-utils": "^1.1.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.24.0",
+    "eslint": "^7.25.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "fibers": "^5.0.0",
     "jest": "^26.6.3",
     "klona": "^2.0.4",
-    "sass": "^1.32.8",
+    "sass": "^1.32.11",
     "sass-loader": "^10.1.1",
-    "stylelint": "^13.12.0",
-    "stylelint-config-standard": "^21.0.0",
+    "stylelint": "^13.13.0",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
     "vue-jest": "^4.0.1"
