--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxtjs/axios": "^5.13.4",
     "@nuxtjs/pwa": "^3.3.5",
-    "bootstrap": "^4.6.0",
-    "bootstrap-vue": "^2.21.2",
-    "focus-visible": "^5.2.0",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.1",
     "lazysizes": "^5.3.2",
     "masonry-layout": "^4.2.2",
     "nuxt": "^2.15.6",
@@ -31,6 +30,8 @@
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/router": "^1.6.1",
     "@nuxtjs/stylelint-module": "^4.0.0",
+    "@types/bootstrap": "^5.0.15",
+    "@types/masonry-layout": "^4.2.2",
     "@vue/test-utils": "^1.2.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
@@ -39,7 +40,8 @@
     "fibers": "^5.0.0",
     "jest": "^26.6.3",
     "klona": "^2.0.4",
-    "sass": "^1.34.0",
+    "nuxt-purgecss": "^1.0.0",
+    "sass": "1.32.13",
     "sass-loader": "^10.2.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
