--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslint": "eslint .",
     "stylelint": "stylelint **/*.{css,scss}",
     "test": "jest",
-    "clean": "rm -rf .eslintcache .nuxt node_modules"
+    "clean": "rm -rf .eslintcache .nuxt assets/fonts node_modules"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -28,6 +28,7 @@
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/router": "^1.6.1",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@types/bootstrap": "^5.0.15",
