--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@popperjs/core": "^2.9.2",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.0.2",
     "lazysizes": "^5.3.2",
     "masonry-layout": "^4.2.2",
     "nuxt": "^2.15.7",
@@ -42,7 +42,7 @@
     "jest": "^26.6.3",
     "klona": "^2.0.4",
     "nuxt-purgecss": "^1.0.0",
-    "sass": "1.32.13",
+    "sass": "^1.35.1",
     "sass-loader": "^10.2.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
