--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "node": true
   },
   "parserOptions": {
-    "parser": "babel-eslint"
+    "parser": "@babel/eslint-parser",
+    "requireConfigFile": false
   },
   "extends": [
     "@nuxtjs",
