--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nuxt-start": "^2.15.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/eslint-parser": "^7.14.9",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
@@ -33,7 +33,7 @@
     "@types/bootstrap": "^5.0.17",
     "@types/masonry-layout": "^4.2.4",
     "@vue/test-utils": "^1.2.2",
-    "babel-eslint": "^10.1.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "eslint-plugin-nuxt": "^2.0.0",
