--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@babel/eslint-parser": "^7.15.0",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@types/bootstrap": "^5.1.0",
@@ -47,6 +46,7 @@
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.20.1",
+    "vue-gtag": "^1.16.1",
     "vue-jest": "^4.0.1"
   }
 }
