Fix stylelint command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "eslint": "eslint --ext .js,.vue .",
-    "stylelint": "stylelint **/*.{css,scss}",
+    "stylelint": "stylelint **/*.{css,scss,vue}",
     "test": "jest",
     "clean": "rm -rf .eslintcache .nuxt assets/fonts node_modules"
   },
