--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "~/*": ["./*"]
-    }
+    "paths": { "~/*": ["./*"] }
   },
-  "exclude": [
-    "node_modules",
-    ".nuxt"
-  ]
+  "exclude": [".nuxt", "node_modules"]
 }
