--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "stylelint": "stylelint **/*.{css,scss,vue}",
     "test": "jest",
     "clear": "rm -rf .nuxt assets/fonts",
-    "clean": "rm -rf .eslintcache .nuxt assets/fonts node_modules"
+    "clean": "rm -rf .nuxt assets/fonts node_modules"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -26,9 +26,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
     "@nuxtjs/eslint-config": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
-    "@nuxtjs/stylelint-module": "^4.0.0",
     "@types/bootstrap": "^5.1.6",
     "@types/masonry-layout": "^4.2.4",
     "@vue/test-utils": "^1.2.2",
