--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "eslint": "eslint --ext .js,.vue .",
+    "lint": "eslint --ext .js,.vue .",
     "stylelint": "stylelint **/*.{css,scss,vue}",
     "test": "jest",
     "clear": "rm -rf .nuxt assets/fonts",
@@ -25,20 +25,20 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
-    "@nuxtjs/eslint-config": "^6.0.1",
+    "@nuxtjs/eslint-config": "^7.0.0",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@types/bootstrap": "^5.1.6",
     "@types/masonry-layout": "^4.2.4",
     "@vue/test-utils": "^1.2.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint": "^8.1.0",
+    "eslint-plugin-nuxt": "^3.0.0",
     "fibers": "^5.0.0",
     "jest": "^26.6.3",
-    "klona": "^2.0.4",
+    "klona": "^2.0.5",
     "nuxt-purgecss": "^1.0.0",
-    "sass": "^1.43.3",
+    "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
