--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "lint": "eslint --ext .js,.vue .",
-    "stylelint": "stylelint **/*.{css,scss,vue}",
-    "test": "jest",
+    "stylelint": "stylelint \"**/*.{css,scss,vue}\"",
+    "test": "jest -i",
     "clear": "rm -rf .nuxt assets/fonts",
     "clean": "rm -rf .nuxt assets/fonts node_modules"
   },
@@ -38,12 +38,15 @@
     "jest": "^26.6.3",
     "klona": "^2.0.5",
     "nuxt-purgecss": "^1.0.0",
+    "postcss": "^8.3.11",
+    "postcss-html": "^1.1.1",
+    "postcss-scss": "^4.0.1",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.21.0",
+    "stylelint": "^14.0.1",
+    "stylelint-config-recommended-vue": "^1.0.0",
+    "stylelint-config-standard-scss": "^2.0.0",
+    "stylelint-order": "^5.0.0",
     "vue-gtag": "^1.16.1",
     "vue-jest": "^4.0.1"
   }
