--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^7.0.0",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@types/bootstrap": "^5.1.6",
