--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt-start": "^2.15.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^7.0.0",
@@ -30,12 +31,12 @@
     "@types/bootstrap": "^5.1.6",
     "@types/masonry-layout": "^4.2.4",
     "@vue/test-utils": "^1.2.2",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^26.6.3",
+    "@vue/vue2-jest": "^27.0.0-alpha.3",
+    "babel-jest": "^27.3.1",
     "eslint": "^8.1.0",
     "eslint-plugin-nuxt": "^3.0.0",
     "fibers": "^5.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.3.1",
     "klona": "^2.0.5",
     "nuxt-purgecss": "^1.0.0",
     "postcss": "^8.3.11",
@@ -47,7 +48,6 @@
     "stylelint-config-recommended-vue": "^1.0.0",
     "stylelint-config-standard-scss": "^2.0.0",
     "stylelint-order": "^5.0.0",
-    "vue-gtag": "^1.16.1",
-    "vue-jest": "^4.0.1"
+    "vue-gtag": "^1.16.1"
   }
 }
