--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^7.0.0",
     "@nuxtjs/google-fonts": "^1.3.0",
