--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
   ],
   "rules": {
     "vue/max-attributes-per-line": "off",
+    "vue/multi-word-component-names": "off",
     "vue/singleline-html-element-content-newline": "off"
   }
 }
