--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bootstrap": "^5.1.3",
     "masonry-layout": "^4.2.2",
     "nuxt": "^2.15.8",
-    "nuxt-start": "^2.15.8"
+    "nuxt-start": "^2.15.8",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -34,20 +35,22 @@
     "@vue/test-utils": "^1.3.0",
     "@vue/vue2-jest": "^27.0.0-alpha.4",
     "babel-jest": "^27.5.1",
-    "eslint": "^8.9.0",
+    "eslint": "^8.10.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "fibers": "^5.0.1",
     "jest": "^27.5.1",
     "klona": "^2.0.5",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.7",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.3",
-    "sass": "^1.49.8",
+    "sass": "^1.49.9",
     "sass-loader": "^10.2.0",
-    "stylelint": "^14.5.1",
+    "stylelint": "^14.5.3",
     "stylelint-config-recommended-vue": "^1.3.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
-    "vue-gtag": "^1.16.1"
+    "vue-gtag": "^1.16.1",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
   }
 }
