--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxtjs/axios": "^5.13.6",
-    "@popperjs/core": "^2.11.2",
+    "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
     "masonry-layout": "^4.2.2",
     "nuxt": "^2.15.8",
@@ -24,23 +24,24 @@
     "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.7",
     "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@nuxt/postcss8": "^1.1.3",
-    "@nuxtjs/eslint-config": "^8.0.0",
+    "@nuxtjs/eslint-config": "^9.0.0",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@types/bootstrap": "^5.1.9",
     "@types/masonry-layout": "^4.2.4",
     "@vue/test-utils": "^1.3.0",
     "@vue/vue2-jest": "^27.0.0-alpha.4",
     "babel-jest": "^27.5.1",
-    "eslint": "^8.10.0",
-    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-nuxt": "^3.2.0",
     "fibers": "^5.0.1",
     "jest": "^27.5.1",
     "klona": "^2.0.5",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.8",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.3",
     "sass": "^1.49.9",
