--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
     "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
+    "@babel/core": "^7.17.12",
     "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-env": "^7.17.12",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@nuxt/postcss8": "^1.1.3",
-    "@nuxtjs/eslint-config": "^9.0.0",
+    "@nuxtjs/eslint-config": "^10.0.0",
     "@types/bootstrap": "^5.1.11",
     "@types/masonry-layout": "^4.2.4",
     "@vue/test-utils": "^1.3.0",
-    "@vue/vue2-jest": "^27.0.0-alpha.4",
-    "babel-jest": "^27.5.1",
+    "@vue/vue2-jest": "^28.0.0",
+    "babel-jest": "^28.1.0",
     "eslint": "^8.15.0",
+    "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-nuxt": "^3.2.0",
     "fibers": "^5.0.1",
-    "jest": "^27.5.1",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "klona": "^2.0.5",
     "postcss": "^8.4.13",
     "postcss-html": "^1.4.1",
