--- a/package.json
+++ b/package.json
@@ -14,17 +14,10 @@
     "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
-    "next": "^13.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.0",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "^16.18.11",
+    "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
@@ -39,12 +32,17 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "msw": "^1.0.0",
+    "next": "^13.1.6",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "prettier": "2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5",
-    "whatwg-fetch": "^3.6.2"
+    "whatwg-fetch": "^3.6.2",
+    "yup": "^0.32.11"
   }
 }
