add tsc command for type checking

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "tsc": "tsc",
     "lint": "next lint",
     "format": "prettier --check .",
     "test": "jest",
