--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "node scripts/clean.mjs"
   },
   "dependencies": {
-    "@hookform/resolvers": "3.1.0",
+    "@hookform/resolvers": "3.3.0",
     "@tanstack/react-query": "4.33.0",
     "@tanstack/react-query-devtools": "4.33.0",
     "@testing-library/jest-dom": "6.1.2",
@@ -42,7 +42,7 @@
     "react-hook-form": "7.45.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "whatwg-fetch": "3.6.17",
-    "yup": "1.2.0"
+    "valibot": "0.13.1",
+    "whatwg-fetch": "3.6.17"
   }
 }
