--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-testing-library": "6.2.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "msw": "1.3.2",
+    "msw": "2.2.13",
     "next": "14.2.1",
     "postcss": "8.4.38",
     "postcss-import": "16.1.0",
@@ -40,8 +40,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.51.3",
     "tailwindcss": "3.4.3",
-    "typescript": "5.2.2",
-    "valibot": "0.30.0",
-    "whatwg-fetch": "3.6.20"
+    "typescript": "5.4.5",
+    "undici": "6.13.0",
+    "valibot": "0.30.0"
   }
 }
