--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   },
   "css.validate": false,
   "editor.codeActionsOnSave": { "source.fixAll": "explicit" },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "eslint.useFlatConfig": false
 }
