--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
     "@types/node": "20.17.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
     "autoprefixer": "10.4.20",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.15",
+    "eslint": "9.13.0",
+    "eslint-config-next": "15.0.2",
     "eslint-plugin-jest-dom": "5.4.0",
     "eslint-plugin-testing-library": "6.4.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "msw": "2.4.3",
-    "next": "14.2.15",
+    "next": "15.0.2",
     "postcss": "8.4.47",
     "postcss-import": "16.1.0",
     "prettier": "3.3.3",
@@ -40,7 +38,8 @@
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.1",
     "tailwindcss": "3.4.14",
-    "typescript": "5.4.5",
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.12.2",
     "undici": "6.20.1",
     "valibot": "0.42.1"
   }
