--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-testing-library": "6.4.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "msw": "2.4.3",
+    "jest-fixed-jsdom": "0.0.9",
+    "msw": "2.6.5",
     "next": "15.0.3",
     "prettier": "3.3.3",
     "react": "18.3.1",
@@ -40,7 +41,6 @@
     "the-new-css-reset": "1.11.3",
     "typescript": "5.6.3",
     "typescript-eslint": "8.15.0",
-    "undici": "6.21.0",
     "valibot": "0.42.1"
   }
 }
