--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
     "clean": "node scripts/clean.mjs"
   },
   "dependencies": {
-    "@hookform/resolvers": "3.9.1",
-    "@tanstack/react-query": "5.62.11",
-    "@tanstack/react-query-devtools": "5.62.11",
+    "@hookform/resolvers": "3.10.0",
+    "@tanstack/react-query": "5.63.0",
+    "@tanstack/react-query-devtools": "5.63.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.1.0",
     "@types/jest": "29.5.14",
-    "@types/node": "20.17.10",
-    "@types/react": "19.0.2",
+    "@types/node": "20.17.12",
+    "@types/react": "19.0.4",
     "@types/react-dom": "19.0.2",
-    "eslint": "9.17.0",
-    "eslint-config-next": "15.1.3",
+    "eslint": "9.18.0",
+    "eslint-config-next": "15.1.4",
     "eslint-plugin-jest-dom": "5.5.0",
     "eslint-plugin-testing-library": "7.1.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-fixed-jsdom": "0.0.9",
     "msw": "2.7.0",
-    "next": "15.1.3",
+    "next": "15.1.4",
     "prettier": "3.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -39,8 +39,8 @@
     "stylelint-config-standard": "36.0.1",
     "stylelint-order": "6.0.4",
     "the-new-css-reset": "1.11.3",
-    "typescript": "5.7.2",
-    "typescript-eslint": "8.18.2",
-    "valibot": "0.42.1"
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.19.1",
+    "valibot": "1.0.0-beta.11"
   }
 }
