--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.10.0",
-    "@tanstack/react-query": "5.66.0",
-    "@tanstack/react-query-devtools": "5.66.0",
+    "@tanstack/react-query": "5.67.2",
+    "@tanstack/react-query-devtools": "5.67.2",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
     "@types/jest": "29.5.14",
-    "@types/node": "20.17.17",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
-    "eslint": "9.20.0",
-    "eslint-config-next": "15.1.6",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "eslint": "9.22.0",
+    "eslint-config-next": "15.2.1",
     "eslint-plugin-jest-dom": "5.5.0",
     "eslint-plugin-testing-library": "7.1.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-fixed-jsdom": "0.0.9",
-    "msw": "2.7.0",
-    "next": "15.1.6",
-    "prettier": "3.4.2",
+    "msw": "2.7.3",
+    "next": "15.2.1",
+    "prettier": "3.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.54.2",
-    "stylelint": "16.14.1",
+    "stylelint": "16.15.0",
     "stylelint-config-standard": "37.0.0",
     "stylelint-order": "6.0.4",
     "the-new-css-reset": "1.11.3",
-    "typescript": "5.7.3",
-    "typescript-eslint": "8.23.0",
-    "valibot": "1.0.0-beta.15"
+    "typescript": "5.8.2",
+    "typescript-eslint": "8.26.0",
+    "valibot": "1.0.0-rc.3"
   }
 }
