--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "clean": "node scripts/clean.mjs"
   },
   "dependencies": {
+    "@eslint/eslintrc": "3.3.0",
+    "@eslint/js": "9.22.0",
     "@hookform/resolvers": "4.0.0",
     "@tanstack/react-query": "5.67.2",
     "@tanstack/react-query-devtools": "5.67.2",
