change lint command from "next lint" to "eslint"

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc",
-    "lint": "next lint",
+    "lint": "eslint",
     "stylelint": "stylelint \"src/**/*.css\"",
     "format": "prettier --check .",
     "test": "jest",
