--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "clean": "node scripts/clean.mjs"
   },
   "dependencies": {
-    "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.38.0",
     "@hookform/resolvers": "5.2.2",
     "@tanstack/react-query": "5.90.5",
@@ -25,14 +24,15 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "9.38.0",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "16.0.1",
     "eslint-plugin-jest-dom": "5.5.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-testing-library": "7.13.3",
     "jest": "30.2.0",
     "jest-environment-jsdom": "30.2.0",
     "jest-fixed-jsdom": "0.0.10",
     "msw": "2.11.2",
-    "next": "15.5.3",
+    "next": "16.0.1",
     "prettier": "3.6.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
