--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/node": "22.19.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
-    "@vitejs/plugin-react-swc": "4.2.2",
+    "@vitejs/plugin-react": "5.1.1",
     "eslint": "9.39.1",
     "eslint-config-next": "16.0.5",
     "eslint-plugin-jest-dom": "5.5.0",
